<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="slab_launcher_crashed">Slab Launcher crashed</string>
    <string name="send_bug_report">Send bug report</string>

    <string name="read_more_at_source">More at %s</string>
    <string name="search_in_duckduckgo">Search on DuckDuckGo</string>

    <string name="properties">Properties</string>

    <string name="x_more" tools:ignore="PluralsCandidate">+%1$d more</string>

    <string name="results_for_x">Results for \"%s\"</string>
    <string name="all_apps">All apps</string>

    <!-- settings start -->
        <string name="general">General</string>

        <string name="color_theme_gen">Color extraction</string>
        <string name="color_theme_day_night">Theme</string>
        <string name="greeting">Greeting</string>

        <string name="layout">Layout</string>
        <string name="columns">Columns</string>
        <string name="dock_rows">Dock rows</string>
        <string name="show_app_suggestions">Show suggestions strip</string>
        <string name="suggestion_count">Suggestion count</string>
        <string name="align_media_player_top_top">Align media player to top</string>

        <string name="tiles">Tiles</string>

        <string name="monochrome_icons">Monochromatism</string>

        <string name="auto_show_keyboard">Auto keyboard</string>
        <string name="auto_show_keyboard_explanation">Pulls up the keyboard, when you open the all apps list</string>

        <string name="icon_packs">Icon packs</string>
        <string name="chosen">Chosen</string>
        <string name="available">Available</string>
        <string name="system">System</string>
        <string name="blur">Translucency</string>

        <string name="dash">Dash</string>
        <string name="flag">Flag</string>

        <string name="enable">Enable</string>
        <string name="height">Height</string>
        <string name="apply_from_preset">Apply from preset</string>
        <string name="add_color">Add color</string>

        <string name="other">Other</string>

        <string name="choose_default_launcher">Choose default launcher</string>
    <!-- settings end -->

    <!-- first time screen start -->
        <string name="splash_message">@string/app_name</string>

        <!-- permissions start -->
            <string name="permissions">Permissions</string>
            <string name="grant_permissions">Grant permissions</string>

            <string name="permission_storage">Storage</string>
            <string name="permission_storage_explanation">To adjust theme colors to the wallpaper &amp; for background blur</string>

            <string name="permission_contacts">Contacts</string>
            <string name="permission_contacts_explanation">Contacts can be displayed in the search screen</string>

            <string name="permission_notifications">Notifications</string>
            <string name="permission_notifications_explanation">For displaying notifications in app cards</string>

            <string name="permission_usage_access">Usage access</string>
            <string name="permission_usage_access_explanation">To improve app suggestions</string>
        <!-- permissions end -->

        <!-- how to use start -->
            <string name="how_to_use">How to use</string>

            <string name="pin_apps_to_home_screen">Pin apps to home screen</string>
            <string name="pin_apps_to_home_screen_explanation">Just go to the app list/search screen (on the right of the main screen), find the app you want, long-press it, and drag it to the bottom of the main screen</string>

            <string name="launcher_settings">Launcher settings</string>
            <string name="launcher_settings_explanation">Long-press on the dash (the card at the top of the main screen)</string>
        <!-- how to use end -->
    <!-- first time screen end -->

    <!-- statements start -->
        <string name="good_morning">Good morning!</string>
        <string name="good_night">Good night!</string>
        <string name="new_year">Happy new year!</string>
        <string name="default_greeting">Do your best</string>
        <string name="next_alarm_at_x">Next alarm at %s, in %sh</string>
    <!-- statements end -->
</resources>