<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            style="@style/SlabLauncher.Intro.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SlabLauncher.Intro.Item.Container">
            <TextView
                android:id="@+id/title0"
                style="@style/SlabLauncher.Intro.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_apps_to_home_screen"/>
            <TextView
                android:id="@+id/description0"
                style="@style/SlabLauncher.Intro.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_apps_to_home_screen_explanation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SlabLauncher.Intro.Item.Container">
            <TextView
                android:id="@+id/title1"
                style="@style/SlabLauncher.Intro.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launcher_settings"/>
            <TextView
                android:id="@+id/description1"
                style="@style/SlabLauncher.Intro.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launcher_settings_explanation"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>