<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            style="@style/SlabLauncher.Intro.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SlabLauncher.Intro.Item.Container">
            <TextView
                android:id="@+id/storage_title"
                style="@style/SlabLauncher.Intro.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage"/>
            <TextView
                android:id="@+id/storage_description"
                style="@style/SlabLauncher.Intro.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage_explanation"/>
            <TextView
                style="@style/SlabLauncher.Intro.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_storage"/>
            <ImageView
                style="@style/SlabLauncher.Intro.Item.Tick"
                android:id="@+id/tick_storage"
                android:visibility="gone"
                android:src="@drawable/ic_tick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SlabLauncher.Intro.Item.Container">
            <TextView
                android:id="@+id/contacts_title"
                style="@style/SlabLauncher.Intro.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_contacts"/>
            <TextView
                android:id="@+id/contacts_description"
                style="@style/SlabLauncher.Intro.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_contacts_explanation"/>
            <TextView
                style="@style/SlabLauncher.Intro.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_contacts"/>
            <ImageView
                style="@style/SlabLauncher.Intro.Item.Tick"
                android:id="@+id/tick_contacts"
                android:visibility="gone"
                android:src="@drawable/ic_tick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SlabLauncher.Intro.Item.Container">
            <TextView
                android:id="@+id/notifications_title"
                style="@style/SlabLauncher.Intro.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notifications"/>
            <TextView
                android:id="@+id/notifications_description"
                style="@style/SlabLauncher.Intro.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_notifications_explanation"/>
            <TextView
                style="@style/SlabLauncher.Intro.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_notifications"/>
            <ImageView
                style="@style/SlabLauncher.Intro.Item.Tick"
                android:id="@+id/tick_notifications"
                android:visibility="gone"
                android:src="@drawable/ic_tick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SlabLauncher.Intro.Item.Container">
            <TextView
                android:id="@+id/usage_title"
                style="@style/SlabLauncher.Intro.Item.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_usage_access"/>
            <TextView
                android:id="@+id/usage_description"
                style="@style/SlabLauncher.Intro.Item.Explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_usage_access_explanation"/>
            <TextView
                style="@style/SlabLauncher.Intro.Item.Grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_usage_access"/>
            <ImageView
                style="@style/SlabLauncher.Intro.Item.Tick"
                android:id="@+id/tick_usage_access"
                android:visibility="gone"
                android:src="@drawable/ic_tick"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>